<resources>
    <string name="app_name">Smart Event</string>
    <string name="wrf2020">Smart Event</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mobile_number">Mobile Number</string>

    <string name="login">LogIn</string>
    <string name="case_description">Case Description</string>
    <string name="agenda">Agenda</string>
    <string name="like">Like</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="speaker">Speakers</string>
    <string name="cases">Cases Discussion </string>
    <string name="my_sessions">My Sessions</string>
    <string name="booths">Booths</string>
    <string name="about_wrf">About</string>
    <string name="quiz">Quiz</string>
    <string name="sponsors">Sponsors</string>
    <string name="contact_us">Contact Us</string>
    <string name="social_mix">Social Mix</string>
    <string name="no_ads_available">No ads available</string>
    <string name="breaks"><font color="blue" size="15"><b>Break</b></font></string>
    <string name="write_a_comment">Write a comment....</string>
    <string name="subject">Subject:</string>
    <string name="about">About</string>
    <string name="email_address">Email address</string>
    <string name="welcome">Welcome</string>
    <string name="to_access_all_features_of_the_provided_by_code_is_all_you_need_to_login_first">To access all features of the App provided by code is all, You need to login first!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="please_enter_your_registered_email_id">Confirm your email and we\'ll send the instructions.</string>
    <string name="we_will_send_a_verification_code_to_your_registered_email_id">We will send a verification code to your registered email ID</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_new_password">Create new password</string>
    <string name="has_been_sent_to_your_email">has been sent to your email.</string>
    <string name="please_enter_the_new_password_that">Please enter the new password that</string>
    <string name="send">Send</string>
    <string name="diagnosis">Enter Diagnosis</string>
    <string name="enter_your_diagnosis">Enter your diagnosis</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="my_id">My Id</string>
    <string name="log_out">Log Out</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pincode">Pincode</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="march_2019">March 2019</string>
    <string name="get_directions">Get Directions</string>
    <string name="floor_map">Floor map</string>
    <string name="feedback">Feedback</string>
    <string name="write_your_feedback">Write your feedback</string>
    <string name="score_board">Score Board</string>
    <string name="read_more">Read more...</string>
    <string name="discussion">Discussion</string>
    <string name="sorry_n_no_events_found">Sorry...\n No Events Found!</string>
    <string name="sorry_n_no_speakers_found">Sorry.... \n No Speakers found.</string>
</resources>
