<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/ll_forgot_password">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin150"
            android:layout_marginTop="@dimen/margin60"
            android:src="@drawable/ic_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin30"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin30"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_gravity="center"
            android:text="@string/please_enter_your_registered_email_id"
            android:textSize="@dimen/textsize15" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin30">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_gmail"
                android:drawablePadding="@dimen/margin10"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin30"
            android:layout_marginRight="@dimen/margin30"
            android:background="@drawable/oval"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_create_new_password"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin30"
            android:text="@string/create_new_password"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin15"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_gravity="center"
            android:text="@string/please_enter_the_new_password_that"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_gravity="center"
            android:text="@string/has_been_sent_to_your_email"
            android:textSize="@dimen/textsize15" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin30">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password_"
                android:drawablePadding="@dimen/margin10"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin30"
            android:layout_marginRight="@dimen/margin30">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/margin10"
                android:hint="@string/confirm_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin30"
            android:layout_marginLeft="@dimen/margin30"
            android:layout_marginRight="@dimen/margin30"
            android:background="@drawable/oval"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>-->
</LinearLayout>