<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DashBoardActivity"
    >

    <include
        android:id="@+id/toolbar_dashboard"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/rrBanner"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:visibility="visible"
        android:layout_weight="1">

        <com.praxello.smartevent.widget.LoopViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.praxello.smartevent.widget.CirclePageIndicator
            android:id="@+id/circlePageIndicator"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"
            android:visibility="gone"
            app:radius="3dp" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#95000000"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/margin10"
        app:cardCornerRadius="@dimen/margin30"
        app:cardElevation="@dimen/margin10"
        app:cardPreventCornerOverlap="true"
        android:layout_margin="@dimen/margin30"
        android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rectangle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin15"
                android:gravity="center"
                android:id="@+id/ll_case_description">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/margin60"
                    android:layout_height="@dimen/margin60"
                    app:civ_border_width="@dimen/margin1"
                    android:src="@drawable/ic_checklist"
                    app:civ_border_color="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/programs"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin10"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin15"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/margin60"
                        android:layout_height="@dimen/margin60"
                        app:civ_border_width="@dimen/margin1"
                        android:src="@drawable/ic_lecture"
                        app:civ_border_color="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speaker"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/margin10"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/margin15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:id="@+id/ll_agenda">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin15"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/margin60"
                        android:layout_height="@dimen/margin60"
                        app:civ_border_width="@dimen/margin1"
                        android:src="@drawable/ic_session"
                        app:civ_border_color="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_sessions"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/margin10"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin15"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/margin60"
                        android:layout_height="@dimen/margin60"
                        app:civ_border_width="@dimen/margin1"
                        android:src="@drawable/ic_booth"
                        app:civ_border_color="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/booths"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/margin10"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_marquee"
        android:text="START | lunch 20.00 | Dinner 60.00 | Travel 60.00 | Doctor 5000.00 | lunch 20.00 | Dinner 60.00 | Travel 60.00 | Doctor 5000.00 | END"
        android:textSize="@dimen/margin15"
        android:textColor="@color/violet"
        android:gravity="center"
        android:padding="@dimen/margin10"
        android:ellipsize = "marquee"
        android:fadingEdge = "horizontal"
        android:marqueeRepeatLimit = "marquee_forever"
        android:scrollHorizontally = "true"
        android:singleLine = "true"/>


</LinearLayout>